--- a/Foosinator/Web.Release.config
+++ b/Foosinator/Web.Release.config
@@ -14,6 +14,13 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+
+  <connectionStrings>
+    <add xdt:Transform="SetAttributes" xdt:Locator="Match(name)" name="Database" connectionString="Application Name=QB;Data Source=.\SQLEXPRESS;User ID=foosinator;Password=foosinator123;Initial Catalog=foosinator;Integrated Security=False;Pooling=False" providerName="System.Data.SqlClient" />
+
+
+    <add  name="Database" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Foosinator;Integrated Security=True;Pooling=False"/>
+  </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
