--- a/Foosinator/Web.config
+++ b/Foosinator/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -6,25 +6,20 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="lightSpeedContexts"
-         type="Mindscape.LightSpeed.Configuration.LightSpeedConfigurationSection, Mindscape.LightSpeed" />
+    <section name="lightSpeedContexts" type="Mindscape.LightSpeed.Configuration.LightSpeedConfigurationSection, Mindscape.LightSpeed" />
   </configSections>
 
   <lightSpeedContexts>
     <!-- TODO: Check pluralizeTableNames setting -->
     <!-- TODO: Add identityMethod="..." if not using KeyTable -->
-    <add name="Database"
-         connectionStringName="Database"
-         dataProvider="SqlServer2008"
-         pluralizeTableNames="False" />
+    <add name="Database" connectionStringName="Database" dataProvider="SqlServer2008" pluralizeTableNames="False" />
   </lightSpeedContexts>
 
 
   <connectionStrings>
-    <add name="Database"
-         connectionString="Data Source=.;Initial Catalog=Foosinator;Integrated Security=True;Pooling=False"/>
+    <add name="Database" connectionString="Data Source=.;Initial Catalog=Foosinator;Integrated Security=True;Pooling=False" />
   </connectionStrings>
-  
+
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -51,7 +46,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-2.1.0.0" newVersion="2.1.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.1.0.0" newVersion="2.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
@@ -59,7 +54,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
